# sdl-grabber

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
Source/: Game.h  Main.cpp  Modules.h  Utils.h
